Updating the NN notes

--- a/Neural Network/1.md
+++ b/Neural Network/1.md
@@ -50,3 +50,44 @@ They are values between 0 and 1 which give the intensity of the pixel ie. 0 for 
 
 ![matrix](wnc.png)
 
+---
+
+### How are the connections between the layers made?
+<p>At first the connections are random. Their weights and biases are selected randomly. </p>
+
+<p>The computer is told that it has made an error by creating a cost function.</p>
+
+<p>1. Suppose, the input to the computer is the number 3, it should have 'activation 1' for the number 3 in its last layer and 'activation 0' for all the other numbers.</p>
+
+<p>2. You add the squares of the differences of 1- the trash activation values (random) and 2-the activation values you want them to have (1 for desired number and 0 for others) </p>
+
+<p>3. The result is the cost. </p>
+
+## min cost: Good guessing of numbers
+<p>4. The average of all the cost values (obtained from the various 'training' data) is taken. That average cost is the final output cost. </p>
+
+<p>5. We will obtain the minimum cost when the derivative of the cost function is zero. </p>
+
+<p>6. Instead of calculating the derivative of a complex function, we can move across its graph. When the slope's line is increasing, we shift to the left for lower value of cost. When it is decreasing, we shift to the right for lower value of cost.</p>
+
+![How to find min of cost function](2.png)
+
+<p>7. There is a gradient vector(multivariable calculus) which helps us find the local minimas of a function. </p>
+<p>The algorithm is:</p>
+<p>1. Find the direction os negative slope.</p>
+<p>2. Take a small step in the direction of decreasing gradient.</p>
+<p>3. Repeat the process.</p>
+
+### This process of lowering the output cost is known as 'Back Propagation'.
+
+## What does each component of input vector depict?
+![Meaning of vector components](3..png)
+
+## Example,
+### Here the value of x affects the cost function 3 times more than the amount by which y affects it.
+
+![function example](4.png)
+
+## Limitations
+<p>1. When given any random input (not a number), it stills gives out a number output.</p>
+<p>2. It cannot draw a number given as input. </p>
