Upadting the md notes

--- a/Neural Network/1.md
+++ b/Neural Network/1.md
@@ -91,3 +91,29 @@ They are values between 0 and 1 which give the intensity of the pixel ie. 0 for 
 ## Limitations
 <p>1. When given any random input (not a number), it stills gives out a number output.</p>
 <p>2. It cannot draw a number given as input. </p>
+
+---
+## Backward Propagation
+
+### Suppose the input number is 2
+
+### <p>* For the activation of number 2 to be the highest in the last layer, we should get a high weighted sum for '2'. How is this done?</p>
+
+<p>1. The connections (with the previous layer) linking high activation numbers should be given higher weights. ie. weights of connections should be in proportion with the respective activation.</p>
+<p>2. The bias should be inceased for the number 2.</p>
+<p>3. The activations of the previous layer should be increased for connections with higher weights.</p>
+
+ ### <p>* At the same time, activation (in the last layer) for all the other numbers shoud be decreased. How is this done?</p>
+
+ <p>Opposite to the above points.</p>
+
+ ---
+
+ <p>Each of the neurons for the remaining numbers will have their own thoughts on how to change the activation of the neurons of the previous layer. The effect of all the neurons is taken simultaneously and the activation of neurons in the previous layer is changed accordingly. </p>
+
+ ![Effect on activation of neurons of previous layer](5.png)
+
+ ## The average of the nudges desired by each number in the values of weights and biases is used to calculate the negative gradient of the cost function. 
+
+ ## Stochastic gradient descent
+ <p>It takes a lot of time for calculating the data using so many training examples. So the training data is grouped into 100 numbers and the data is calculated. </p>
